<resources>
    <string name="app_name">Calculator</string>
    <string name="_1" translatable="false">1</string>
    <string name="_2" translatable="false">2</string>
    <string name="_3" translatable="false">3</string>
    <string name="_4" translatable="false">4</string>
    <string name="_5" translatable="false">5</string>
    <string name="_6" translatable="false">6</string>
    <string name="_7" translatable="false">7</string>
    <string name="_8" translatable="false">8</string>
    <string name="_9" translatable="false">9</string>
    <string name="_0" translatable="false">0</string>
    <string name="_00" translatable="false">00</string>
    <string name="point" translatable="false">.</string>
    <string name="equally" translatable="false">=</string>
    <string name="plus" translatable="false">+</string>
    <string name="minus" translatable="false">-</string>
    <string name="division" translatable="false">/</string>
    <string name="multiply" translatable="false">*</string>
    <string name="percent" translatable="false">%</string>
    <string name="reset" translatable="false">C</string>
    <string name="backspace" translatable="false">⌫</string>
    <string name="settings_icon" translatable="false">⚙</string>
    <string name="apply">Apply</string>
    <string name="dark">Dark</string>
    <string name="_default">Default</string>
    <string name="theme">Theme</string>
    <string name="settings">Settings</string>
    <string name="error_message">Error</string>
</resources>
