<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:columnCount="4">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_reset"
        style="@style/formatButtonStyle"
        android:text="@string/reset" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_percent"
        style="@style/operandButtonStyle"
        android:text="@string/percent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_backspace"
        style="@style/formatButtonStyle"
        android:text="@string/backspace" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_division"
        style="@style/operandButtonStyle"
        android:text="@string/division" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_1"
        style="@style/numberButtonStyle"
        android:text="@string/_1" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_2"
        style="@style/numberButtonStyle"
        android:text="@string/_2" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_3"
        style="@style/numberButtonStyle"
        android:text="@string/_3" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_multiply"
        style="@style/operandButtonStyle"
        android:text="@string/multiply" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_4"
        style="@style/numberButtonStyle"
        android:text="@string/_4" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_5"
        style="@style/numberButtonStyle"
        android:text="@string/_5" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_6"
        style="@style/numberButtonStyle"
        android:text="@string/_6" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_minus"
        style="@style/operandButtonStyle"
        android:text="@string/minus" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_7"
        style="@style/numberButtonStyle"
        android:text="@string/_7" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_8"
        style="@style/numberButtonStyle"
        android:text="@string/_8" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_9"
        style="@style/numberButtonStyle"
        android:text="@string/_9" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_plus"
        style="@style/operandButtonStyle"
        android:text="@string/plus"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_00"
        style="@style/numberButtonStyle"
        android:text="@string/_00"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_0"
        style="@style/numberButtonStyle"
        android:text="@string/_0"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_point"
        style="@style/numberButtonStyle"
        android:text="@string/point" />

    <Button
        android:id="@+id/button_equally"
        style="@style/equallyButtonStyle"
        android:text="@string/equally"/>

</GridLayout>